@@ -371,20 +371,6 @@ name|ivy
 operator|.
 name|event
 operator|.
-name|EndDownloadEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|fr
-operator|.
-name|jayasoft
-operator|.
-name|ivy
-operator|.
-name|event
-operator|.
 name|IvyEvent
 import|;
 end_import
@@ -414,20 +400,6 @@ operator|.
 name|event
 operator|.
 name|PrepareDownloadEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|fr
-operator|.
-name|jayasoft
-operator|.
-name|ivy
-operator|.
-name|event
-operator|.
-name|StartDownloadEvent
 import|;
 end_import
 
@@ -2137,6 +2109,27 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|loadProperties
+argument_list|(
+name|url
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|loadProperties
+parameter_list|(
+name|URL
+name|url
+parameter_list|,
+name|boolean
+name|overwrite
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|Properties
 name|properties
 init|=
@@ -2157,6 +2150,8 @@ expr_stmt|;
 name|addAllVariables
 argument_list|(
 name|properties
+argument_list|,
+name|overwrite
 argument_list|)
 expr_stmt|;
 block|}
@@ -2166,6 +2161,27 @@ name|loadProperties
 parameter_list|(
 name|File
 name|file
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|loadProperties
+argument_list|(
+name|file
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|loadProperties
+parameter_list|(
+name|File
+name|file
+parameter_list|,
+name|boolean
+name|overwrite
 parameter_list|)
 throws|throws
 name|IOException
@@ -2191,6 +2207,8 @@ expr_stmt|;
 name|addAllVariables
 argument_list|(
 name|properties
+argument_list|,
+name|overwrite
 argument_list|)
 expr_stmt|;
 block|}
@@ -2204,6 +2222,43 @@ parameter_list|,
 name|String
 name|value
 parameter_list|)
+block|{
+name|setVariable
+argument_list|(
+name|varName
+argument_list|,
+name|value
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setVariable
+parameter_list|(
+name|String
+name|varName
+parameter_list|,
+name|String
+name|value
+parameter_list|,
+name|boolean
+name|overwrite
+parameter_list|)
+block|{
+if|if
+condition|(
+name|overwrite
+operator|||
+operator|!
+name|_variables
+operator|.
+name|containsKey
+argument_list|(
+name|varName
+argument_list|)
+condition|)
 block|{
 name|Message
 operator|.
@@ -2232,6 +2287,25 @@ name|value
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"'"
+operator|+
+name|varName
+operator|+
+literal|"' already set: discarding '"
+operator|+
+name|value
+operator|+
+literal|"'"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
@@ -2291,19 +2365,6 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|overwrite
-operator|||
-operator|!
-name|_variables
-operator|.
-name|containsKey
-argument_list|(
-name|key
-argument_list|)
-condition|)
-block|{
 name|String
 name|val
 init|=
@@ -2322,9 +2383,10 @@ argument_list|(
 name|key
 argument_list|,
 name|val
+argument_list|,
+name|overwrite
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 comment|/**      * Substitute variables in the given string by their value found in the current       * set of variables      *       * @param str the string in which substitution should be made      * @return the string where all current ivy variables have been substituted by their value      */
