@@ -1077,6 +1077,24 @@ literal|"file"
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|String
+name|overwrite
+init|=
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"overwrite"
+argument_list|)
+argument_list|)
+decl_stmt|;
 try|try
 block|{
 name|Message
@@ -1097,6 +1115,22 @@ name|File
 argument_list|(
 name|propFilePath
 argument_list|)
+argument_list|,
+name|overwrite
+operator|==
+literal|null
+condition|?
+literal|true
+else|:
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|overwrite
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1124,6 +1158,22 @@ name|URL
 argument_list|(
 name|propFilePath
 argument_list|)
+argument_list|,
+name|overwrite
+operator|==
+literal|null
+condition|?
+literal|true
+else|:
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|overwrite
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
